@@ -33,6 +33,7 @@ Build system
 Fixed bugs
 ----------
 - DoubleToNEq: prefer variables with integral scalar over fractional scalar
+- DualInfer: check if propagating dual variables leads to infeasibility to return Unbounded or Infeasible
 
 Miscellaneous
 -------------
